# Neural_Network_Numbers

./: .gitignore  LICENSE  README.md  STUDY_GUIDE.md  data.py  nn.py  predict.py  pyproject.toml  train.py
